Fix text overflowing score screen on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -136,7 +136,6 @@ button {
   }
 }
 
-
 /* background colors for correct/incorrect answer */
 
 .correct {
@@ -262,11 +261,11 @@ btn:active {
 
 #score-content {
   background-color: #fefefe;
-  padding: 20px;
+  padding: 10px;
   border: 3px solid black;
   border-radius: 10px;
-  width: 60%;
-  height: 70%;
+  width: 80%;
+  height: 80%;
   font-size: 32px;
   box-shadow: 0px 5px 15px 0px;
   justify-content: center;
